# PitchRecorder

./: CMakeLists.txt  CMakeUserPresets.json
cmake/: FindAubio.cmake
module/: Frequencies.json  Music.hpp  main.cpp
